# ProLink

./: .gitattributes  .gitignore  1_found_sequences_5000.fasta  Main.py  ProLink.ipynb  README.md  parameters.cfg  prolink_env.yaml  pyproject.toml  requirements.txt  setup.py
ProLink/: __init__.py  __main__.py  parameters.cfg  parameters.yaml  prolink.py
ProLink/mega_configs/: NJ_1000.mao
ProLink/modules/: blast.py  clustering.py  obtaining_sequences.py  pfam.py  subprocess_functions.py  trim.py  weblogo.py
ProLink/modules/mega_configs/: ML_1000.mao  ML_250.mao  NJ_100.mao
modules/: blast (4) (1).py  blast.py  clustering.py  obtaining_sequences.py  pfam.py  subprocess_functions.py
modules/mega_configs/: ML_100.mao  ML_2000.mao  ML_500.mao  ML_5000.mao  NJ_2000.mao  NJ_250.mao  NJ_500.mao  NJ_5000.mao
